--- a/main.html
+++ b/main.html
@@ -4,10 +4,51 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<form action="/action_page.php">
+  <div class="mb-3 mt-3">
+    <label for="fname" class="form-label">First Name</label>
+    <input type="text" class="form-control" id="first-name-input" name="fname">
+  </div>
+	<div class="mb-3 mt-3">
+    <label for="lname" class="form-label">Last Name</label>
+    <input type="text" class="form-control" id="last-name-input" name="lname">
+  </div>
+  <div class="mb-3 mt-3">
+    <label for="email" class="form-label">Email Address</label>
+    <input type="email" class="form-control" id="email-input" placeholder="xyz@abc.com" name="email">
+  </div>
+		<div class="mb-3 mt-3">
+    <label for="clg" class="form-label">College</label>
+    <input type="text" class="form-control" id="college-input" name="clg">
+  </div>
+		<div class="mb-3 mt-3">
+    <label for="clg" class="form-label">Graduation Year</label>
+			<select class="form-select" placeholder="choose.">
+  <option>2020</option>
+  <option>2021</option>
+  <option>2022</option>
+  <option>2023</option>
+</select>
+  </div>
+	
+		<div class="mb-3 mt-3">
+    <label for="rollno" class="form-label">Roll No.</label>
+    <input type="text" class="form-control" id="email" name="rollno">
+  </div>
+  <div class="form-check mb-3">
+    <label class="form-check-label">
+      <input class="form-check-input" type="checkbox" name="remember" id="conditions-checkbox"> Agree to terms and conditions
+    </label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
