--- a/main.html
+++ b/main.html
@@ -3,55 +3,112 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+<div class="card">
+  <h2 class="text-center mt-3">Internship Form</h2>
+  <div class="card-body">
+<form class="needs-validation" novalidate>
 
-	<form action="/action_page.php">
+  <!-- First Name -->
   <div class="mb-3 mt-3">
-    <label for="fname" class="form-label">First Name</label>
-    <input type="text" class="form-control" id="first-name-input" name="fname">
+    <label class="form-label">First Name</label>
+    <input type="text" class="form-control" id="first-name-input" name="fname" required>
+    <div class="invalid-feedback">
+      First name is required.
+    </div>
   </div>
-	<div class="mb-3 mt-3">
-    <label for="lname" class="form-label">Last Name</label>
-    <input type="text" class="form-control" id="last-name-input" name="lname">
-  </div>
+
+  <!-- Last Name -->
   <div class="mb-3 mt-3">
-    <label for="email" class="form-label">Email Address</label>
-    <input type="email" class="form-control" id="email-input" placeholder="xyz@abc.com" name="email">
+    <label class="form-label">Last Name</label>
+    <input type="text" class="form-control" id="last-name-input" name="lname" required>
+    <div class="invalid-feedback">
+      Last name is required.
+    </div>
   </div>
-		<div class="mb-3 mt-3">
-    <label for="clg" class="form-label">College</label>
-    <input type="text" class="form-control" id="college-input" name="clg">
+
+  <!-- Email -->
+  <div class="mb-3 mt-3">
+    <label class="form-label">Email Address</label>
+    <input type="email" class="form-control" id="email-input" placeholder="xyz@abc.com" name="email" required>
+    <div class="invalid-feedback">
+      Please enter a valid email address.
+    </div>
   </div>
-		<div class="mb-3 mt-3">
-    <label for="clg" class="form-label">Graduation Year</label>
-			<select class="form-select" placeholder="choose.">
-  <option>2020</option>
-  <option>2021</option>
-  <option>2022</option>
-  <option>2023</option>
-</select>
+
+  <!-- College -->
+  <div class="mb-3 mt-3">
+    <label class="form-label">College</label>
+    <input type="text" class="form-control" id="college-input" name="clg" required>
+    <div class="invalid-feedback">
+      College name is required.
+    </div>
   </div>
-	
-		<div class="mb-3 mt-3">
-    <label for="rollno" class="form-label">Roll No.</label>
-    <input type="text" class="form-control" id="email" name="rollno">
+
+  <!-- Graduation Year -->
+  <div class="mb-3 mt-3">
+    <label class="form-label">Graduation Year</label>
+    <select class="form-select" required>
+      <option selected disabled value="">Choose...</option>
+      <option>2020</option>
+      <option>2021</option>
+      <option>2022</option>
+      <option>2023</option>
+    </select>
+    <div class="invalid-feedback">
+      Please select your graduation year.
+    </div>
   </div>
+
+  <!-- Roll Number -->
+  <div class="mb-3 mt-3">
+    <label class="form-label">Roll No.</label>
+    <input type="text" class="form-control" name="rollno" required>
+    <div class="invalid-feedback">
+      Roll number is required.
+    </div>
+  </div>
+
+  <!-- Terms and Conditions -->
   <div class="form-check mb-3">
+    <input class="form-check-input" type="checkbox" id="conditions-checkbox" required>
     <label class="form-check-label">
-      <input class="form-check-input" type="checkbox" name="remember" id="conditions-checkbox"> Agree to terms and conditions
+      Agree to terms and conditions
     </label>
+    <div class="invalid-feedback">
+      You must agree before submitting.
+    </div>
   </div>
+
   <button type="submit" class="btn btn-primary">Submit</button>
+
 </form>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="./script.js">
+</div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Bootstrap Validation Script -->
+<script>
+(() => {
+  'use strict';
+
+  const forms = document.querySelectorAll('.needs-validation');
+
+  Array.from(forms).forEach(form => {
+    form.addEventListener('submit', event => {
+      if (!form.checkValidity()) {
+        event.preventDefault();
+        event.stopPropagation();
+      }
+      form.classList.add('was-validated');
+    }, false);
+  });
+})();
 </script>
 
 </body>
-
 </html>
