--- a/main.html
+++ b/main.html
@@ -15,78 +15,63 @@
 
   <!-- First Name -->
   <div class="mb-3 mt-3">
-    <label class="form-label">First Name</label>
+    <label for="first-name-input" class="form-label">First Name</label>
     <input type="text" class="form-control" id="first-name-input" name="fname" required>
-    <div class="invalid-feedback">
-      First name is required.
-    </div>
+    <div class="invalid-feedback">First name is required.</div>
   </div>
 
   <!-- Last Name -->
   <div class="mb-3 mt-3">
-    <label class="form-label">Last Name</label>
+    <label for="last-name-input" class="form-label">Last Name</label>
     <input type="text" class="form-control" id="last-name-input" name="lname" required>
-    <div class="invalid-feedback">
-      Last name is required.
-    </div>
+    <div class="invalid-feedback">Last name is required.</div>
   </div>
 
   <!-- Email -->
   <div class="mb-3 mt-3">
-    <label class="form-label">Email Address</label>
+    <label for="email-input" class="form-label">Email Address</label>
     <input type="email" class="form-control" id="email-input" placeholder="xyz@abc.com" name="email" required>
-    <div class="invalid-feedback">
-      Please enter a valid email address.
-    </div>
+    <div class="invalid-feedback">Please enter a valid email.</div>
   </div>
 
   <!-- College -->
   <div class="mb-3 mt-3">
-    <label class="form-label">College</label>
+    <label for="college-input" class="form-label">College</label>
     <input type="text" class="form-control" id="college-input" name="clg" required>
-    <div class="invalid-feedback">
-      College name is required.
-    </div>
+    <div class="invalid-feedback">College name is required.</div>
   </div>
 
   <!-- Graduation Year -->
   <div class="mb-3 mt-3">
-    <label class="form-label">Graduation Year</label>
-    <select class="form-select" required>
+    <label for="grad-year-select" class="form-label">Graduation Year</label>
+    <select id="grad-year-select" class="form-select" required>
       <option selected disabled value="">Choose...</option>
       <option>2020</option>
       <option>2021</option>
       <option>2022</option>
       <option>2023</option>
     </select>
-    <div class="invalid-feedback">
-      Please select your graduation year.
-    </div>
+    <div class="invalid-feedback">Please select a year.</div>
   </div>
 
-  <!-- Roll Number -->
+  <!-- Roll No -->
   <div class="mb-3 mt-3">
-    <label class="form-label">Roll No.</label>
-    <input type="text" class="form-control" name="rollno" required>
-    <div class="invalid-feedback">
-      Roll number is required.
-    </div>
+    <label for="roll-no-input" class="form-label">Roll No.</label>
+    <input type="text" class="form-control" id="roll-no-input" name="rollno" required>
+    <div class="invalid-feedback">Roll number is required.</div>
   </div>
 
   <!-- Terms and Conditions -->
   <div class="form-check mb-3">
     <input class="form-check-input" type="checkbox" id="conditions-checkbox" required>
-    <label class="form-check-label">
-      Agree to terms and conditions
-    </label>
-    <div class="invalid-feedback">
-      You must agree before submitting.
-    </div>
+    <label class="form-check-label" for="conditions-checkbox">Agree to terms and conditions</label>
+    <div class="invalid-feedback">You must agree before submitting.</div>
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
 
 </form>
+
 </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
